--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Young Mathematician</title>
 </head>
 
@@ -14,7 +14,7 @@
     <span class="gradient"></span>
     <span class="spotlight"></span>
   </div>
-  <script type="module" src="/script/work with DOM.js"></script>
+  <script type="module" src="script/work with DOM.js"></script>
 </body>
 
 </html>
