--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style/style.css">
   <title>Young Mathematician</title>
 </head>
 
 <body>
   <header>
-    <div>You can support the development of the project: 00-000-0000-0000-00</div>
+
+    <p>You can support the development of the project: <img src="img/west.png" width="20" height="10">
+      03-1399-0962029-000</p>
+    <p><a href="https://market.galinazabela.ru">BOOK STORE to order in which your child can become the main
+        character</a>
+    </p>
+
   </header>
   <main>
     <div class="neon">
@@ -27,11 +33,11 @@
     </div>
   </main>
   <footer>
-    <div>
-      <!-- <span>Can support the development of the project: 00-000-0000-0000-00</span> -->
-      <span>The application has been developed by Artem Krivitskyi</span>
-      <span><a href="mailto:1borgir1@gmail.com">You can contact me: 1borgir1@gmail.com</a></span>
-    </div>
+    <!-- <span>Can support the development of the project: 00-000-0000-0000-00</span> -->
+    <p>The application has been developed by Artem Krivitskyi</p>
+    <p>Assistance in purchasing, configuring and upgrading a desktop computer or laptop in Christchurch City.</p>
+    <p><a href="mailto:1borgir1@gmail.com">You can contact me: 1borgir1@gmail.com</a></p>
+    <p><a href="https://m.me/id=100080097536873?ref=Hello!+I+would+like+to+contact+you.">Contact in Messenger</a></p>
   </footer>
   <script type="module" src="script/listen to events.js"></script>
 </body>
