--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <p>You can support the development of the project: <img src="img/west.png" width="20" height="10">
       03-1399-0962029-000</p>
-    <p><a href="https://market.galinazabela.ru">BOOK STORE to order in which your child can become the main
+    <p><a href="http://market.galinazabela.ru">BOOK STORE to order in which your child can become the main
         character</a>
     </p>
 
