--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style/style768px.css">
+  <link rel="stylesheet" href="style/styleMax1023pxMin768px.css">
   <title>Young Mathematician</title>
 </head>
 
@@ -13,7 +15,8 @@
 
     <p>You can support the development of the project: <img src="img/west.png" width="20" height="10">
       03-1399-0962029-000</p>
-    <p><a href="http://market.galinazabela.ru">BOOK STORE to order in which your child can become the main
+    <p><a href="http://market.galinazabela.ru" target="_blank">BOOK STORE to order in which your child can become the
+        main
         character</a>
     </p>
 
@@ -37,7 +40,8 @@
     <p>The application has been developed by Artem Krivitskyi</p>
     <p>Assistance in purchasing, configuring and upgrading a desktop computer or laptop in Christchurch City.</p>
     <p><a href="mailto:1borgir1@gmail.com">You can contact me: 1borgir1@gmail.com</a></p>
-    <p><a href="https://m.me/id=100080097536873?ref=Hello!+I+would+like+to+contact+you.">Contact in Messenger</a></p>
+    <p><a href="https://m.me/id=100080097536873?ref=Hello!+I+would+like+to+contact+you." target="_blank">Contact in
+        Messenger</a></p>
   </footer>
   <script type="module" src="script/listen to events.js"></script>
 </body>
