--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
 
-    <p>You can support the development of the project: <img src="img/west.png" width="20" height="10">
+    <p>You can support the development of the project: <img src="img/west.png" class="westpac">
       03-1399-0962029-000</p>
     <p><a href="http://market.galinazabela.ru" target="_blank">BOOK STORE to order in which your child can become the
         main
