--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     <!-- <span>Can support the development of the project: 00-000-0000-0000-00</span> -->
     <p>The application has been developed by Artem Krivitskyi</p>
     <p>Assistance in purchasing, configuring and upgrading a desktop computer or laptop in Christchurch City.</p>
-    <p><a href="mailto:1borgir1@gmail.com">You can contact me: 1borgir1@gmail.com</a></p>
+    <p><a href="mailto:1borgir1@gmail.com?subject=YoungMathematician" target="_blank">You can contact me:
+        1borgir1@gmail.com</a></p>
     <p><a href="https://m.me/id=100080097536873?ref=Hello!+I+would+like+to+contact+you." target="_blank">Contact in
         Messenger</a></p>
   </footer>
