add WhatsApp & Telegram

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <!-- <span>Can support the development of the project: 00-000-0000-0000-00</span> -->
     <p>The application has been developed by Artem Krivitskyi</p>
     <p>Assistance in purchasing, configuring and upgrading a desktop computer or laptop in Christchurch City.</p>
-    <p><a href="mailto:1borgir1@gmail.com?subject=YoungMathematician" target="_blank">You can contact me:
+    <p>You can contact me:<a href="mailto:1borgir1@gmail.com?subject=YoungMathematician" target="_blank">
         1borgir1@gmail.com</a></p>
-    <p><a href="https://m.me/id=100080097536873?ref=Hello!+I+would+like+to+contact+you." target="_blank">Contact in
-        Messenger</a></p>
+    <p><a href="https://wa.me/380669954399" target="_blank">Write to WhatsApp</a></p>
+    <p><a href="https://t.me/@Artem_Kryvytskyi" target="_blank">Write to Telegram</a></p>
   </footer>
   <script type="module" src="script/listen to events.js"></script>
 </body>
