The line of the bookstore has been commented out, the address of the telegram has been corrected

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     <p>You can support the development of the project: <img src="img/west.png" class="westpac">
       03-1399-0962029-000</p>
-    <p><a href="http://market.galinazabela.ru" target="_blank">BOOK STORE to order in which your child can become the
+    <!-- <p><a href="http://market.galinazabela.ru" target="_blank">BOOK STORE to order in which your child can become the
         main
         character</a>
-    </p>
+    </p> -->
 
   </header>
   <main>
@@ -42,7 +42,7 @@
     <p>You can contact me:<a href="mailto:1borgir1@gmail.com?subject=YoungMathematician" target="_blank">
         1borgir1@gmail.com</a></p>
     <p><a href="https://wa.me/380669954399" target="_blank">Write to WhatsApp</a></p>
-    <p><a href="https://t.me/@Artem_Kryvytskyi" target="_blank">Write to Telegram</a></p>
+    <p><a href="https://t.me/Artem_Kryvytskyi" target="_blank">Write to Telegram</a></p>
   </footer>
   <script type="module" src="script/listen to events.js"></script>
 </body>
