--- a/index.html
+++ b/index.html
@@ -16,18 +16,23 @@
   <div class="side-panel">
     <label class="side-button-2" for="side-checkbox">+</label>
     <div class="side-title">
-      <p>Здравствуйте!</p>Ваш заказ.
+      <p>Hello!</p>
     </div>
     <span class="asid-span">
-      Вы выбрали следующий товар:
+
       <span class="asid-span-window"></span>
-      <span class="asid-span">Вы планируете купить товар на сумму</span>
+      <span class="asid-span"></span>
       <span class="plan-summer"></span>
     </span>
     <footer class="asid-footer">
-      <span>Введите номер телефона для обратной связи</span>
-      <input class="asid-input" type="tel" placeholder="+380..." size="12">
-      <button class="asid-button">КУПИТЬ</button>
+      <span>E-mail</span>
+      <input class="asid-input">
+      <span>Password</span>
+      <input class="asid-input">
+      <span>By entering the data in the email and password fields, I agree that my child will use the Young
+        Mathematician
+        application</span>
+      <button class="asid-button" type="button" id="registration">Registration</button>
     </footer>
   </div>
   <div class="side-button-1-wr">
@@ -58,7 +63,6 @@
       <button class="btn" type="button" id="*">multiplication (*)</button>
       <button class="btn" type="button" id="/">division (/)</button>
     </div>
-    <div><a href="modalWindow/modalWindow.html">I want my child to study</a></div>
   </main>
   <footer>
     <!-- <span>Can support the development of the project: 00-000-0000-0000-00</span> -->
