Add a modal window with a description about the application

--- a/index.html
+++ b/index.html
@@ -12,11 +12,29 @@
 </head>
 
 <body>
+
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span id="close" class="close">&times;</span>
+      <h2>Welcome to the Young Mathematician app!</h2>
+      <p>This app is designed for children who want to learn how to solve math problems.</p>
+      <p>The application is currently in development, but you can already practice solving addition, subtraction,
+        multiplication,
+        and division problems up to 10.</p>
+      <p>Once the app is fully developed, you, as a parent, will be able to motivate your child to tackle more
+        challenging
+        problems and stay focused.</p>
+      <hr>
+      <p>You can close this message by clicking on any empty space.</p>
+    </div>
+  </div>
+  <!--
   <input type="checkbox" id="side-checkbox" />
   <div class="side-panel">
     <label class="side-button-2" for="side-checkbox">+</label>
     <div class="side-title">
-      <p>Hello!</p>
+      <h3>Hello, the parent of a young mathematician!!!</h3>
+
     </div>
     <span class="asid-span">
 
@@ -40,6 +58,7 @@
       <div class="side-b side-open">I want my child to study</div>
     </label>
   </div>
+  -->
   <header>
 
     <p>You can support the development of the project: <img src="img/west.png" class="westpac">
