The first draft

--- a/index.html
+++ b/index.html
@@ -28,16 +28,14 @@
       <p>You can close this message by clicking on any empty space.</p>
     </div>
   </div>
-  <!--
-  <input type="checkbox" id="side-checkbox" />
+
+  <!-- <input type="checkbox" id="side-checkbox" />
   <div class="side-panel">
     <label class="side-button-2" for="side-checkbox">+</label>
     <div class="side-title">
       <h3>Hello, the parent of a young mathematician!!!</h3>
-
     </div>
     <span class="asid-span">
-
       <span class="asid-span-window"></span>
       <span class="asid-span"></span>
       <span class="plan-summer"></span>
@@ -52,13 +50,13 @@
         application</span>
       <button class="asid-button" type="button" id="registration">Registration</button>
     </footer>
-  </div>
+  </div> -->
   <div class="side-button-1-wr">
     <label class="side-button-1" for="side-checkbox">
       <div class="side-b side-open">I want my child to study</div>
     </label>
   </div>
-  -->
+
   <header>
 
     <p>You can support the development of the project: <img src="img/west.png" class="westpac">
