--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         challenging
         problems and stay focused.</p>
       <hr>
-      <p>You can close this message by clicking on any empty space.</p>
+      <p>You can close this message by clicking on any empty space or click on the red cross</p>
     </div>
   </div>
 
