Add Student Page

--- a/index.html
+++ b/index.html
@@ -53,12 +53,19 @@
       <button class="asid-button" type="button" id="registration">Registration</button>
     </footer>
   </div>
-  <div class="side-button-1-wr">
-    <label class="side-button-1" for="side-checkbox">
-      <div class="side-b side-open">I want my child to study</div>
-    </label>
+-->
+  <div class="block-button">
+    <div class="side-button-1-wr" id="registration">
+      <label class="side-button-1" for="side-checkbox">
+        <div class="side-b side-open">I want my child to study</div>
+      </label>
+    </div>
+    <div class="side-button-1-wr">
+      <label class="side-button-1" for="side-checkbox">
+        <div class="side-b side-open">I'm study</div>
+      </label>
+    </div>
   </div>
-  -->
   <header>
 
     <p>You can support the development of the project: <img src="img/west.png" class="westpac">
