Add save numberCoins

--- a/Study/studyPage.html
+++ b/Study/studyPage.html
@@ -19,9 +19,9 @@
     <div class="number-coins">
       <img src="../img/coin_pig.png">
       <p>number of coins</p>
-      <input type="number">
+      <input type="number" id="numberCoins">
     </div>
-    <button type="submit">Upload</button>
+    <button type="submit" id="submit">click to Apply</button>
   </div>
   <div>
 
