--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </footer>
   </div>
 -->
-  <div class="block-button">
+  <!-- <div class="block-button">
     <div class="side-button-1-wr" id="registration">
       <label class="side-button-1" for="side-checkbox">
         <div class="side-b side-open">I want my child to study</div>
@@ -63,7 +63,7 @@
         <div class="side-b side-open">I'm study</div>
       </label>
     </div>
-  </div>
+  </div> -->
   <header>
 
     <p>You can support the development of the project: <img src="img/west.png" class="westpac">
