--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style/modalWindow.css">
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/asid.css">
   <link rel="stylesheet" href="style/style768px.css">
@@ -13,7 +14,7 @@
 
 <body>
 
-  <div id="modal" class="modal">
+  <!-- <div id="modal" class="modal">
     <div class="modal-content">
       <span id="close" class="close">&times;</span>
       <h2>Welcome to the Young Mathematician app!</h2>
@@ -27,43 +28,8 @@
       <hr>
       <p>You can close this message by clicking on any empty space or click on the red cross</p>
     </div>
-  </div>
-
-  <!-- <input type="checkbox" id="side-checkbox" />
-  <div class="side-panel">
-    <label class="side-button-2" for="side-checkbox">+</label>
-    <div class="side-title">
-      <h3>Hello, the parent of a young mathematician!!!</h3>
-    </div>
-    <span class="asid-span">
-      <span class="asid-span-window"></span>
-      <span class="asid-span"></span>
-      <span class="plan-summer"></span>
-    </span>
-    <footer class="asid-footer">
-      <span>E-mail</span>
-      <input class="asid-input">
-      <span>Password</span>
-      <input class="asid-input">
-      <span>By entering the data in the email and password fields, I agree that my child will use the Young
-        Mathematician
-        application</span>
-      <button class="asid-button" type="button" id="registration">Registration</button>
-    </footer>
-  </div>
--->
-  <!-- <div class="block-button">
-    <div class="side-button-1-wr" id="registration">
-      <label class="side-button-1" for="side-checkbox">
-        <div class="side-b side-open">I want my child to study</div>
-      </label>
-    </div>
-    <div class="side-button-1-wr">
-      <label class="side-button-1" for="side-checkbox">
-        <div class="side-b side-open">I'm study</div>
-      </label>
-    </div>
   </div> -->
+
   <header>
 
     <p>You can support the development of the project: <img src="img/west.png" class="westpac">
@@ -98,6 +64,8 @@
     <p><a href="https://t.me/Artem_Kryvytskyi" target="_blank">Write to Telegram</a></p>
   </footer>
   <script type="module" src="script/listen to events.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
 </body>
 
 </html>
